--- a/frontend/webportal/src/Modules/Registration/DatePicker.css
+++ b/frontend/webportal/src/Modules/Registration/DatePicker.css
@@ -8,8 +8,8 @@
     /* Outline border for focused elements */
     --rdp-outline-selected: 3px solid var(--rdp-accent-color);
     /* Outline border for focused _and_ selected elements */
-
-    padding: 2rem;
+    height: 100%;
+    padding: 0 2em;
 }
 
 .rdp-caption {
@@ -18,6 +18,12 @@
 
 .rdp-months {
     justify-content: center;
+    margin: auto;
+    margin-top: 30px;
+    background-color: var(--background);
+    border-radius: var(--radiusNormal);
+    box-shadow: 0px 20px 36px -8px rgba(14, 14, 44, 0.1), 0px 1px 1px rgba(0, 0, 0, 0.05);
+    height: 85%;
 }
 
 .rdp-head {
