--- a/frontend/webportal/src/Modules/Registration/Registration.module.css
+++ b/frontend/webportal/src/Modules/Registration/Registration.module.css
@@ -157,11 +157,12 @@
 }
 
 .landingPageContent {
-    padding: 70px 0;
+    padding-top: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 1;
+    background-color: var(--accent);
 }
 
 .stickyHeader+.landingPageContent {
@@ -175,12 +176,12 @@
 .separator {
     width: 100%;
     height: 3px;
-    background-color: var(--success);
+    background-color: var(--green);
     margin: 30px 0;
 }
 
 .summaryBackground {
-    background-color: var(--success);
+    background-color: var(--green);
     padding-top: 45px;
     border-radius: var(--radiusNormal);
 }
@@ -200,7 +201,7 @@
     font-weight: bolder;
     letter-spacing: var(--spreadSpacing);
     font-size: var(--header2);
-    color: var(--success);
+    color: var(--green);
     margin: 30px 0;
 }
 
@@ -215,7 +216,7 @@
     font-weight: var(--bold);
     letter-spacing: var(--normalSpacing);
     font-size: var(--big);
-    color: var(--warning);
+    color: var(--yellow);
     margin-top: 30px;
 }
 
