--- a/frontend/webportal/src/Modules/Registration/TimeSlots.module.css
+++ b/frontend/webportal/src/Modules/Registration/TimeSlots.module.css
@@ -1,13 +1,18 @@
 .slotList {
     display: flex;
-    height: 100%;
+    height: 80%;
     gap: 20px;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     padding-top: 30px;
+    padding-bottom: 20px;
     max-width: 720px;
     margin: auto;
+    margin-top: 30px;
+    background-color: var(--background);
+    border-radius: var(--radiusNormal);
+    box-shadow: 0px 20px 36px -8px rgba(14, 14, 44, 0.1), 0px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
 .slotBox {
@@ -22,18 +27,18 @@
 }
 
 .slotAvail {
-    background-color: var(--available);
+    background-color: var(--green);
     color: var(--white);
     cursor: pointer;
 }
 
 .slotAvail:hover {
-    background-color: var(--availableHover);
-    box-shadow: 0 0 20px #56c87888;
+    background-color: var(--greenHover);
+    box-shadow: var(--greenShadow);
 }
 
 .slotAvail:active {
-    background-color: var(--availableActive);
+    background-color: var(--greenActive);
 }
 
 .slotNotAvail {
