--- a/frontend/webportal/src/index.css
+++ b/frontend/webportal/src/index.css
@@ -25,6 +25,8 @@
 :root {
     /* colors */
     --primary: #64acc4;
+    --primaryGradient: linear-gradient(90deg, #67f0d6, #2086a5);
+    --primaryGradientHover: linear-gradient(90deg, #61e4cc, #1e7b97);
     --primaryHover: #50a1bc;
     --primaryShadow: 0 0 30px #64acc4a1;
     --background: #FAFCFE;
@@ -36,20 +38,27 @@
     --text: #5A5A75;
     --subText: #888E9A;
     --red: #eb5d47;
-    --redHover: #d15441;
-    --redShadow: 0 0 30px #eb5d478a;
+    --redHover: #da5743;
+    --redActive: #c9513e;
+    --redShadow: 0 0 30px #eb5d477e;
+    --redGradient: linear-gradient(90deg, #fb0d65, #fd6a3f);
+    --redGradientHover: linear-gradient(90deg, #61e4cc, #1e7b97);
     --green: #56C878;
     --greenHover: #4caf6a;
-    --greenActive: #459c5f;
+    --greenActive: #49a564;
     --greenShadow: 0 0 30px #56c8787e;
     --yellow: #F6AE2D;
     --dark: #24243F;
     --darkHover: #1d1d33;
+    --darkActive: #121220;
+    --darkShadow: 0 0 30px #24243f7c;
+    --defaultContainerShadow: 0px 20px 36px -8px rgba(14, 14, 44, 0.1), 0px 1px 1px rgba(0, 0, 0, 0.05);
 
     /* typography */
     /* size */
     --small: 1rem;
-    --normal: 1.2rem;
+    --normal: 18px;
+    --bigger: 20px;
     --big: 24px;
     --titleSmall: 32px;
     --titleBig: 38px;
