--- a/frontend/webportal/src/Modules/Registration/DatePicker.css
+++ b/frontend/webportal/src/Modules/Registration/DatePicker.css
@@ -22,7 +22,7 @@
     margin-top: 30px;
     background-color: var(--background);
     border-radius: var(--radiusNormal);
-    box-shadow: 0px 20px 36px -8px rgba(14, 14, 44, 0.1), 0px 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: var(--defaultContainerShadow);
     height: 85%;
 }
 
