--- a/frontend/webportal/src/index.css
+++ b/frontend/webportal/src/index.css
@@ -25,7 +25,7 @@
 :root {
     /* colors */
     --primary: #64acc4;
-    --primaryGradient: linear-gradient(90deg, #67f0d6, #2086a5);
+    --primaryGradient: linear-gradient(90deg, #61dbe4, #167896);
     --primaryGradientHover: linear-gradient(90deg, #61e4cc, #1e7b97);
     --primaryHover: #50a1bc;
     --primaryShadow: 0 0 30px #64acc4a1;
@@ -41,17 +41,20 @@
     --redHover: #da5743;
     --redActive: #c9513e;
     --redShadow: 0 0 30px #eb5d477e;
-    --redGradient: linear-gradient(90deg, #fb0d65, #fd6a3f);
-    --redGradientHover: linear-gradient(90deg, #61e4cc, #1e7b97);
+    --redGradient: linear-gradient(90deg, #ff7357, #ff2957);
+    --redGradientHover: linear-gradient(90deg, #fb0d65, #fd6a3f);
     --green: #56C878;
     --greenHover: #4caf6a;
     --greenActive: #49a564;
+    --greenGradient: linear-gradient(90deg, #56C878, #49a589);
+    --greenGradientSmall: linear-gradient(90deg, #60d684, #49a56c);
     --greenShadow: 0 0 30px #56c8787e;
     --yellow: #F6AE2D;
     --dark: #24243F;
     --darkHover: #1d1d33;
     --darkActive: #121220;
     --darkShadow: 0 0 30px #24243f7c;
+    --darkGradient: linear-gradient(100deg, #3a2f6b, #24243F); 
     --defaultContainerShadow: 0px 20px 36px -8px rgba(14, 14, 44, 0.1), 0px 1px 1px rgba(0, 0, 0, 0.05);
 
     /* typography */
