--- a/frontend/webportal/src/Modules/ConfirmationPanel/ConfirmationPanel.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/ConfirmationPanel.module.css
@@ -1,5 +1,5 @@
 .main {
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--accent);
 }
 
@@ -7,5 +7,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 120px;
+    padding: 4rem;
+    margin: 0 25%;
 }
