--- a/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
@@ -2,6 +2,7 @@
     box-shadow: var(--defaultContainerShadow);
     border-radius: var(--radiusNormal);
     padding-top: 45px;
+    margin-top: 4rem;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -49,7 +50,7 @@
     background-color: var(--accent);
     border: 0;
     border-radius: var(--radiusNormal);
-    height: 80px;
+    height: 5rem;
     width: 500px;
     padding: 12px;
     text-align: center;
@@ -61,7 +62,7 @@
 
 .buttonSend {
     width: 500px;
-    height: 80px;
+    height: 6rem;
     padding: 12px;
     text-align: center;
     color: var(--white);
@@ -70,7 +71,7 @@
     border: 0;
     font-size: var(--titleBig);
     font-weight: var(--bold);
-    margin-top: 25px;
+    margin-top: 3rem;
     margin-bottom: 25px;
     transition: 0.2s;
 }
