--- a/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
@@ -2,8 +2,9 @@
     box-shadow: var(--defaultContainerShadow);
     border-radius: var(--radiusNormal);
     padding-top: 45px;
+    margin: auto;
     margin-top: 4rem;
-    width: 100%;
+    max-width: 750px;
     display: flex;
     flex-direction: column;
 }
@@ -50,9 +51,10 @@
     background-color: var(--accent);
     border: 0;
     border-radius: var(--radiusNormal);
+    max-width: 30rem;
+    width: 100%;
     height: 5rem;
-    width: 500px;
-    padding: 12px;
+    padding: 1rem;
     text-align: center;
     font-size: 25px;
     font-weight: var(--bold);
@@ -61,9 +63,10 @@
 }
 
 .buttonSend {
-    width: 500px;
+    max-width: 30rem;
+    width: 100%;
     height: 6rem;
-    padding: 12px;
+    padding: 1rem;
     text-align: center;
     color: var(--white);
     background-color: var(--primary);
@@ -74,6 +77,7 @@
     margin-top: 3rem;
     margin-bottom: 25px;
     transition: 0.2s;
+    letter-spacing: var(--spreadSpacing);
 }
 
 .buttonSend:hover {
