--- a/frontend/webportal/src/Modules/AdminPanel/AdminPanel.module.css
+++ b/frontend/webportal/src/Modules/AdminPanel/AdminPanel.module.css
@@ -18,6 +18,7 @@
     border-radius: var(--radiusNormal);
     box-shadow: var(--defaultContainerShadow);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -132,4 +133,79 @@
 .doctorDelete:hover {
     background-color: var(--red);
     color: var(--background);
+}
+
+.userContainer {
+    width: 100%;
+}
+
+.addUserContainer {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 100%;
+    gap: 1rem;
+}
+
+.formInputs {
+    display: flex;
+    gap: 1rem;
+}
+
+.inputs {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-evenly;
+}
+
+.checkBoxes {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    justify-content: space-evenly;
+}
+
+.singleCheckbox>input {
+    margin-right: 1rem;
+}
+
+.linkedDoctor {
+    flex: 1;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.lindekDoctorSelect>select {
+    padding: 0.5rem;
+    width: 100%;
+    font-size: var(--normal);
+    border: 2px solid var(--accentDark);
+    border-radius: var(--radiusSmall)
+}
+
+.addNewUserButton {
+    flex: 1;
+    margin: auto;
+    width: 10rem;
+    background-color: var(--green);
+    border: none;
+    border-radius: 10px;
+    padding: 1rem 1rem;
+    color: var(--background);
+    font-weight: bold;
+    font-size: var(--normal);
+    letter-spacing: var(--spreadSpacing);
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.addNewUserButton:hover {
+    background-color: var(--greenHover);
 }
