--- a/frontend/webportal/src/Modules/Registration/Specialist.module.css
+++ b/frontend/webportal/src/Modules/Registration/Specialist.module.css
@@ -31,9 +31,9 @@
 
 .searchIcon {
     flex: 1;
-    width: 28px;
-    height: 28px;
-    margin-left: 30px;
+    max-width: 2rem;
+    height: 2rem;
+    margin-left: 2rem;
 }
 
 .specialistNotDataText {
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
+    padding: 2rem 0;
     height: 100%;
     max-width: 720px;
     margin: auto;
@@ -99,6 +99,7 @@
 
 .specialistSelectionWrapper {
     height: 100%;
+    width: 100%;
 }
 
 .specialistsList {
